[package]
name = "gecko-profiler-demangle"
version = "0.1.0"
authors = ["Markus Stange <mstange@themasta.com>"]
description = "Contains wrapper function for C++ and rust name demangling, which is intended to be used through WASM in perf.html."
repository = "https://github.com/mstange/gecko-profiler-demangle"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustc-demangle = "0.1.9"
cpp_demangle = "0.2.12"
msvc-demangler = "0.7.0"
wasm-bindgen = "0.2.28"

[profile.release]
lto = true
panic = "abort"
