[package]
name = "gecko-profiler-demangle"
version = "0.1.0"
authors = ["Markus Stange <mstange@themasta.com>"]
description = "Contains wrapper function for C++ and rust name demangling, which is intended to be used through WASM in perf.html."
repository = "https://github.com/mstange/gecko-profiler-demangle"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustc-demangle = "0.1.19"
cpp_demangle = "0.3.2"
msvc-demangler = "0.8.0"
wasm-bindgen = "0.2.74"

[profile.release]
lto = true
panic = "abort"
